--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr" class="h-100">
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>{% block title %}BSFR{% endblock %}</title>
+        {% block stylesheets %}
+            {{ encore_entry_link_tags('general') }}
+        {% endblock %}
+
+        {% block javascripts %}
+            {{ encore_entry_script_tags('general') }}
+        {% endblock %}
     </head>
-    <body>
+    <body class="h-100">
         {% block body %}{% endblock %}
-        {% block javascripts %}{% endblock %}
     </body>
 </html>
