--- a/assets/scss/general.scss
+++ b/assets/scss/general.scss
@@ -7,7 +7,7 @@
 }
 
 html {
-  background-image: url("/public/build/wallpaper.jpg");
+  background-image: url("../../public/build/wallpaper.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
