Submit Run Form + Discord auth

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr" class="h-100">
+<html lang="fr" class="h-100" style="background-image: url('{{ asset('build/wallpaper.jpg') }}')">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -12,7 +12,20 @@
             {{ encore_entry_script_tags('general') }}
         {% endblock %}
     </head>
-    <body class="h-100">
+    <body>
+        <div class="alert-container text-right mr-5">
+            {% for message in app.flashes('error') %}
+                <div class="alert alert-danger flash" role="alert" id="flash-error">
+                    {{ message }}
+                </div>
+            {% endfor %}
+            {% for message in app.flashes('success') %}
+                <div class="alert alert-success flash" role="alert" id="flash-success">
+                    {{ message }}
+                </div>
+            {% endfor %}
+        </div>
+
         {% block body %}{% endblock %}
     </body>
 </html>
