--- a/assets/scss/general.scss
+++ b/assets/scss/general.scss
@@ -7,10 +7,11 @@
 }
 
 html {
-  background-image: url("../../public/build/wallpaper.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  background-attachment: fixed;
+  font-size: 14px;
 
   body {
     backdrop-filter: blur(10px);
@@ -31,6 +32,28 @@ html {
       .btn-discord {
         font-size: 20px;
       }
+    }
+
+    .alert-container {
+      position: absolute;
+      top: 20px;
+      right: 20px;
+      margin-left: auto;
+      margin-right: auto;
+      width: fit-content;
+
+      .flash {
+        transition: all 1s ease;
+        width: fit-content;
+      }
+
+      .alert {
+        position: relative;
+        z-index: 999999;
+        // left: 2em;
+        // right: 0;
+      }
+
     }
   }
 }
