--- a/public/css/style.css
+++ b/public/css/style.css
@@ -71,8 +71,7 @@ a {
     vertical-align: -0.125em;
 }
 
-.under_construction .btn_discord {
-    background-color: #7289DA;
+.under_construction .btn-brand {
     border: 1px solid transparent;
     display: inline-block;
     border-radius: 2rem;
@@ -82,20 +81,47 @@ a {
     padding: 0.375rem 0.75rem;
     text-align: center;
     text-decoration: none;
-    color: #FFFFFF;
     cursor: pointer;
     transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
     user-select: none;
     vertical-align: middle;
+    margin: 0 6px;
 }
 
-.under_construction .btn_discord:hover {
-    color: #212529;
+.under_construction .btn-discord {
+    background-color: #7289DA;
+    color: #FFFFFF;
 }
 
-.under_construction .btn_discord .discord-logo {
+.under_construction .btn-discord .discord-logo {
     width: 1.25em;
     vertical-align: -0.15em;
+}
+
+.under_construction .btn-twitter {
+    background-color: #00ACEE;
+    color: #FFFFFF;
+}
+
+.under_construction .btn-twitter .twitter-logo {
+    width: 1.15em;
+    vertical-align: -0.25em;
+}
+
+.under_construction .btn-youtube {
+    background-color: #FF0000;
+    color: #FFFFFF;
+}
+
+.under_construction .btn-youtube .youtube-logo {
+    width: 1.5em;
+    vertical-align: -0.4em;
+}
+
+.under_construction .btn-discord:hover,
+.under_construction .btn-twitter:hover,
+.under_construction .btn-youtube:hover {
+    color: #212529;
 }
 
 .form {
