--- a/views/index.ejs
+++ b/views/index.ejs
@@ -44,6 +44,9 @@
             <a href="/forms/run/youtube" class="btn-brand btn-run">
                 Soumettre une run
             </a>
+            <a href="/interactive-map" class="btn-brand btn-run">
+                Carte interactive
+            </a>
         </div>
     </div>
 </body>
