--- a/views/run/index.ejs
+++ b/views/run/index.ejs
@@ -37,7 +37,7 @@
                         Vous devez être membre du serveur Discord BSFR afin de pouvoir nous soumettre une run.
                     </p>
                     <p>
-                        Vous pouvez nous rejoindre en cliquant sur ce lien d'invitation : <a href="https://discord.gg/UZMg39cu" target="_blank">https://discord.gg/UZMg39cu</a>
+                        Vous pouvez nous rejoindre en cliquant sur ce lien d'invitation : <a href="<%= process.env.DISCORD_INVITATION_URL %>" target="_blank"><%= process.env.DISCORD_INVITATION_URL %></a>
                     </p>
                     <p>
                         Actualisez la page après avoir rejoint le serveur Discord pour voir le formulaire.
