--- a/views/run/index.ejs
+++ b/views/run/index.ejs
@@ -12,6 +12,8 @@
     <title>Beat Saber FR - Soumission run YouTube</title>
 </head>
 <body>
+    <div class="background"><div class="blur"></div></div>
+    
     <div class="container">
         <form class="form">
             <div class="card card-border">
