--- a/views/map/index.ejs
+++ b/views/map/index.ejs
@@ -14,6 +14,8 @@
     <title>Beat Saber FR - Carte interactive</title>
 </head>
 <body>
+    <div class="background"><div class="blur"></div></div>
+    
     <div class="container">
         <form class="form">
             <div class="card card-border">
